namespace DPMS_WebAPI.Enums
{
	public enum UserStatus
	{
        Deactivated = 0,
        Activated = 1,
	}
}
